v8/tests/messages/unexpected-primary.out
unexpected-primary.js:1: Uncaught SyntaxError: Unexpected token &
true &&& false
       ^
